2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-05-31  Andreas Kupries  <andreask@activestate.com>

	* New module and package: oo::util. Right now only easy
	  referencing of instance methods for callbacks.