@@ -4,4 +4,4 @@ if {![package vsatisfies [package provide Tcl] 8.5]} {
     # PRAGMA: returnok
     return
 }
-package ifneeded oo::util 1 [list source [file join $dir ooutil.tcl]]
+package ifneeded oo::util 1.1 [list source [file join $dir ooutil.tcl]]
